--- a/App/Tpl/Index/doc.html
+++ b/App/Tpl/Index/doc.html
@@ -1,7 +1,8 @@
 <extend name="base"/>
 <block name="content">
 <div class="container col-md-8">
-
+	<br><br>
+	<a href="https://github.com/yyc2013/UserCenter"><h3><label><strong>Github地址<strong></label></h3></a>
 	<br><br>
 	<h2><strong>Oauth2.0接入说明</strong></h2>
 	<br><br>
